# webprocessor

./: Bus.cpp  Bus.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitItem.cpp  CircuitItem.h  Connection.cpp  Connection.h  EventLoop.cpp  EventLoop.h  Gate.cpp  Gate.h  Pin.cpp  Pin.h  Processor.cpp  Processor.h  README.md  main.cpp
Adders/: ALU.cpp  ALU.h  EightBitAdder.cpp  EightBitAdder.h  FullAdder.cpp  FullAdder.h  NBitAdder.cpp  NBitAdder.h
SimpleGates/: And.cpp  And.h  LogicLevel.cpp  LogicLevel.h  Not.cpp  Not.h  Or.cpp  Or.h  XOr.cpp  XOr.h
